Fri Mar 26 13:43:08 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debianbuild/tao-utils.install:
          Corrected filenames

        * debianbuild/libtao-orbsvcs-dev.install:
          Added missing libraries

Fri Mar 26 09:02:50 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tests/run_test.pl:
          Added -l option which allows to run tests selectively.

Wed Mar 24 07:17:22 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * bin/fuzz.pl:
          Added dds4ccm_trace checks.

Tue Mar 23 10:59:08 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debianbuild/patches/34-bts386713.dpatch:
          Updated from debian

Fri Mar 19 16:52:08 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tests/MT_NonBlocking_Connect_Test.cpp:
          And another attempt to workaround WFMO reactor. The previous
          changes could break the test on other platforms.

Fri Mar 19 16:44:37 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/Dev_Poll_Reactor.cpp (find_handler): If the handle isn't
          registered, don't try to dereference a null pointer; return 0.

Fri Mar 19 16:16:30 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tests/MT_NonBlocking_Connect_Test.cpp:
          Fixed a typo in previous commit.

Fri Mar 19 15:58:52 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tests/MT_NonBlocking_Connect_Test.cpp:
          Fixed a test on Windows for WFMO reactor which doesn't support
          work_pending() function.

Fri Mar 19 13:23:18 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * ace/OS_NS_Thread.cpp:

          Added a helper function for starting tasks on VxWorks.

        * bin/PerlACE/ProcessVX_Unix.pm:
        * bin/PerlACE/ProcessVX_Win32.pm:
        * bin/PerlACE/TestTarget_VxWorks.pm:

          Fixed a bug that was triggered with CreateProcess was called with
          only one argument.